--- a/src/output.css
+++ b/src/output.css
@@ -217,6 +217,15 @@
   .right-0 {
     right: calc(var(--spacing) * 0);
   }
+  .left-2 {
+    left: calc(var(--spacing) * 2);
+  }
+  .left-10 {
+    left: calc(var(--spacing) * 10);
+  }
+  .left-20 {
+    left: calc(var(--spacing) * 20);
+  }
   .left-90 {
     left: calc(var(--spacing) * 90);
   }
